--- a/vue-sample/modal.html
+++ b/vue-sample/modal.html
@@ -18,7 +18,14 @@
       you can use custom content here to overwrite
       default content
     -->
+    
     <h3 slot="header">custom header</h3>
+
+    <form slot="body">
+      
+      <label>min</label> : <input type="number"><br/>
+      <label>name</label>: <input type="text">
+    </form>
   </modal>
 
   </div>
