--- a/vue-sample/modal.html
+++ b/vue-sample/modal.html
@@ -44,7 +44,7 @@
 </div>
 
 
-  <script src="static/vue.js"></script>
+  <script src="static/vue.min.js"></script>
   <script src="static/vuetify.js"></script>
   <script>
   Vue.config.devtools = false;
